@@ -85,13 +85,6 @@
            <artifactId>dotenv-java</artifactId>
            <version>3.0.0</version>
        </dependency>
-
-       <!--- okhttp3 -->
-       <dependency>
-           <groupId>com.squareup.okhttp3</groupId>
-           <artifactId>okhttp</artifactId>
-           <version>5.3.0</version>
-       </dependency>
    </dependencies>
 
    <build>
@@ -110,7 +103,8 @@
             <version>3.2.5</version>
             <configuration>
                 <useModulePath>true</useModulePath>
-                <argLine>--enable-native-access=ALL-UNNAMED</argLine>
+                <!-- Enable native access and allow Byte Buddy experimental mode on very new JDKs -->
+                <argLine>--enable-native-access=ALL-UNNAMED -Dnet.bytebuddy.experimental=true</argLine>
             </configuration>
         </plugin>
 
